--- a/index.html
+++ b/index.html
@@ -123,6 +123,6 @@
   <script src="audio.js"></script>
   <script src="effects.js"></script>
   <script src="recorder.js"></script>
-  <script src="app.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
